<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainactivity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_field"
                android:textColorHint="@color/aqua_font"
                android:inputType="text"
                android:textColor="@color/aqua_font"
                android:maxLines="1"
                android:gravity="top"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/btn_searchbar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search_bar" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_base" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_profile"
        app:layout_constraintTop_toTopOf="@+id/rv_profile" />

    <TextView
        android:id="@+id/tv_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_not_found"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_profile"
        app:layout_constraintEnd_toEndOf="@+id/rv_profile"
        app:layout_constraintStart_toStartOf="@+id/rv_profile"
        app:layout_constraintTop_toTopOf="@+id/rv_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>